Created Admin,User panel. Add report from the user panel, fetch reports from admin panel, update status of reports from the admin panel